fix login spacing

--- a/public/style_login.css
+++ b/public/style_login.css
@@ -40,5 +40,11 @@ body{
     width: 70%;
     margin:auto;
     flex-direction: column;
-    margin-top: 10%;
+    margin-top: 5%;
+    font-size: 25pt;
+}
+
+button{
+    font-size: 25pt;
+    margin-bottom: 10px;
 }
